www-src/app/styles/layout.less
html {
	position: relative;
}

body {
	margin-bottom: 60px;
}

body > .container {
	padding-top: 60px;
}

.nav, .pagination, .carousel, .panel-title a { cursor: pointer; }

.footer {
	position: fixed;
	bottom: 0;
	width: 100%;
	height: 31px;

	.container {
		background-color: rgba(255, 255, 255, 0.9);
		border-radius: 15px 15px 0 0;

		p {
			margin: 5px 0;
		}
	}

	.text-muted {
		// color: #ffffff;
	}
}

.home {
	.list-group-item {
		cursor: pointer;
		cursor: hand;
	}
	.list-group-item:hover, .list-group-item:focus {
		text-decoration: none;
		color: #555555;
		background-color: #ecf0f1;
	}
}

.list-group, .overview {
	.row {
		margin-left: 0;
		margin-right: 0;
	}
}

.glyphicon-flip {
	transform: scaleX(-1);
	-moz-transform: scaleX(-1);
	-webkit-transform: scaleX(-1);
	-ms-transform: scaleX(-1);
}

#about {
	img {
		width: 90%;
		max-height: 90%;
		margin: 15px auto;
	}
}

.text-medium {
	font-size: 18px !important;
}

.text-small {
	font-size: 12px !important;
}

.jumbotron-medium {
	padding: 30px;
}

.no-underline {
	&, * {
		text-decoration: none !important;
	}
}

